# adventofcode2021

./: adventofcode2021.cabal
app/: Main.hs
